--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
                         <li><a class="link" href=" #contact-section">Контакти</a></li>
                     </ul>
                 </nav>
-                <button type="button" class="button modal-btn-open">Замовити дзвінок</button>
+                <button type="button" class="header__button button modal-btn-open">Замовити дзвінок</button>
+                <button class="header__burger" type="button">
+                    <svg width="24" height="24">
+                        <use href="./images/icons.svg#icon-menu"></use>
+                    </svg>
+                </button>
             </div>
         </div>
     </header>
