--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
                     </ul>
                 </nav>
                 <button type="button" class="header__button button modal-btn-open">Замовити дзвінок</button>
-                <button class="header__burger" type="button">
+                <button type="button" class="header__burger button menu-btn-open">
                     <svg width="24" height="24">
                         <use href="./images/icons.svg#icon-menu"></use>
                     </svg>
                 </button>
+                <div class="mobile-menu">
+                    <button class="mobile-menu__btn-close menu-btn-close" type="button">
+                        Close
+                    </button>
+                </div>
             </div>
         </div>
     </header>
@@ -37,6 +42,9 @@
         <section class="hero-section">
             <div class="container">
                 <h1 class="hero-section__title"><span class="text-brand">Сучасна</span> пекарня</h1>
+                <button class="hero-section__button button menu-btn-open" type="button">
+                    Замовити дзвінок
+                </button>
             </div>
         </section>
         <section class="advantages-section">
@@ -287,6 +295,7 @@
     </div>
 
     <script src="/./js/modal.js"></script>
+    <script src="/./js/mobile-menu.js"></script>
 </body>
 
 </html>
