added media screen to tradition-section and changed title on media screen hero-section

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
                         <p>
                             <span class="text-brand text-bold text-uppercase">shop bakery</span> — це пекарня, яка взяла
                             все найкраще,
-                            і
-                            зберегла
-                            смак традиційної випічки та натуральність інгредієнтів.
+                            і зберегла смак традиційної випічки та натуральність інгредієнтів.
                         </p>
                         <p class="traditions-section__text traditions-section__text--limited">
                             Ми працюємо як найвідоміші мережі —
