--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сучасна пекарня</title>
     <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -120,55 +121,101 @@
         <section class="formats-section section" id="formats-section">
             <div class="container">
                 <h2 class="formats-section__title section__title section__title--centered">Формати</h2>
-                <div class="formats-section__container">
-                    <button class="carousel-button" type="bytton">
+                <div class="formats-section__slider">
+                    <button class="carousel-button prev" type="bytton">
                         <svg width="16" height="16">
                             <use href="/images/icons.svg#icon-arrow"></use>
                         </svg>
                     </button>
-                    <ul class="formats-section__list">
-                        <li class="formats-section__item">
-                            <article class="format-card">
-                                <img class="format-card__image" src="./images/walrus-format.jpg" alt="Walrus format" />
-                                <h3 class="format-card__title" lang="en">Walrus</h3>
-                                <div class="format-card__text">
-                                    <p>Площа: до 120 м2</p>
-                                    <p>Меню: розширене меню</p>
-                                    <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти - різнороби
-                                    </p>
-                                    <p>Посадкові місця: є</p>
-                                </div>
+                    <div class="formats-section__container swiper-container">
+                        <ul class="swiper-wrapper">
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="./images/walrus-format.jpg"
+                                        alt="Walrus format" />
+                                    <h3 class="format-card__title" lang="en">Walrus</h3>
+                                    <div class="format-card__text">
+                                        <p>Площа: до 120 м2</p>
+                                        <p>Меню: розширене меню</p>
+                                        <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти -
+                                            різнороби
+                                        </p>
+                                        <p>Посадкові місця: є</p>
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="./images/horseshoe-format.jpg"
+                                        alt="Horseshoe format" />
+                                    <h3 class="format-card__title" lang="en">Horseshoe</h3>
+                                    <div class="format-card__text">
+                                        <p>
+                                        <p>Площа: до 25 м2</p>
+                                        <p>Меню: найпопулярніші позиції меню</p>
+                                        <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                                        <p>Посадкові місця: відсутні</p>
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="./images/handlebar-format.jpg"
+                                        alt="Handlebar format" />
+                                    <h3 class="format-card__title" lang="en">Handlebar</h3>
+                                    <div class="format-card__text">
+                                        <p>Площа: до 15 м2</p>
+                                        <p>Меню: найпопулярніші позиції меню</p>
+                                        <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                                        <p>Посадкові місця: відсутні</p>
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="./images/walrus-format.jpg"
+                                        alt="Walrus format" />
+                                    <h3 class="format-card__title" lang="en">Walrus</h3>
+                                    <div class="format-card__text">
+                                        <p>Площа: до 120 м2</p>
+                                        <p>Меню: розширене меню</p>
+                                        <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти -
+                                            різнороби
+                                        </p>
+                                        <p>Посадкові місця: є</p>
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="./images/horseshoe-format.jpg"
+                                        alt="Horseshoe format" />
+                                    <h3 class="format-card__title" lang="en">Horseshoe</h3>
+                                    <div class="format-card__text">
+                                        <p>
+                                        <p>Площа: до 25 м2</p>
+                                        <p>Меню: найпопулярніші позиції меню</p>
+                                        <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                                        <p>Посадкові місця: відсутні</p>
+                                    </div>
+                                </article>
+                            </li>
+                            <li class="swiper-slide">
+                                <article class="format-card">
+                                    <img class="format-card__image" src="./images/handlebar-format.jpg"
+                                        alt="Handlebar format" />
+                                    <h3 class="format-card__title" lang="en">Handlebar</h3>
+                                    <div class="format-card__text">
+                                        <p>Площа: до 15 м2</p>
+                                        <p>Меню: найпопулярніші позиції меню</p>
+                                        <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                                        <p>Посадкові місця: відсутні</p>
+                                    </div>
+                                </article>
+                            </li>
+                        </ul>
+                    </div>
 
-                            </article>
-                        </li>
-                        <li class="formats-section__item">
-                            <article class="format-card">
-                                <img class="format-card__image" src="./images/horseshoe-format.jpg"
-                                    alt="Horseshoe format" />
-                                <h3 class="format-card__title" lang="en">Horseshoe</h3>
-                                <div class="format-card__text">
-                                    <p>
-                                    <p>Площа: до 25 м2</p>
-                                    <p>Меню: найпопулярніші позиції меню</p>
-                                    <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-                                    <p>Посадкові місця: відсутні</p>
-                                </div>
-                            </article>
-                        </li>
-                        <li class="formats-item">
-                            <article class="format-card">
-                                <img class="format-card__image" src="./images/handlebar-format.jpg"
-                                    alt="Handlebar format" />
-                                <h3 class="format-card__title" lang="en">Handlebar</h3>
-                                <div class="format-card__text">
-                                    <p>Площа: до 15 м2</p>
-                                    <p>Меню: найпопулярніші позиції меню</p>
-                                    <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-                                    <p>Посадкові місця: відсутні</p>
-                                </div>
-                            </article>
-                        </li>
-                    </ul>
                     <button class="carousel-button next" type="button">
                         <svg width="16" height="16">
                             <use href="/images/icons.svg#icon-arrow"></use>
@@ -291,7 +338,8 @@
             </form>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="/./js/formats-slider.js"></script>
     <script src="/./js/modal.js"></script>
     <script src="/./js/mobile-menu.js"></script>
 </body>
