--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
             <div class="container">
                 <h2 class="formats-section__title section__title section__title--centered">Формати</h2>
                 <div class="formats-section__slider">
-                    <button class="carousel-button prev" type="bytton">
+                    <button class="formats-section__button carousel-button prev" type="bytton">
                         <svg width="16" height="16">
                             <use href="/images/icons.svg#icon-arrow"></use>
                         </svg>
                     </button>
                     <div class="formats-section__container swiper-container">
-                        <ul class="swiper-wrapper">
+                        <ul class="formats-section__list swiper-wrapper">
                             <li class="swiper-slide">
                                 <article class="format-card">
                                     <img class="format-card__image" src="./images/walrus-format.jpg"
@@ -214,9 +214,15 @@
                                 </article>
                             </li>
                         </ul>
-                    </div>
 
-                    <button class="carousel-button next" type="button">
+                        <div class="pagination">
+                            <span class="pagination__button" aria-label="Go to slide 1"></span>
+                            <span class="pagination__button" aria-label="Go to slide 2"></span>
+                            <span class="pagination__button" aria-label="Go to slide 3"></span>
+                            <span class="pagination__button" aria-label="Go to slide 4"></span>
+                        </div>
+                    </div>
+                    <button class="formats-section__button carousel-button next" type="button">
                         <svg width="16" height="16">
                             <use href="/images/icons.svg#icon-arrow"></use>
                         </svg>
@@ -257,8 +263,7 @@
                     </div>
                     <iframe class="contact-section__map"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640531314047!2d30.491233500000003!3d50.4566697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699790158199!5m2!1suk!2sua"
-                        width="603" height="595" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
             </div>
@@ -266,44 +271,48 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="footer-container">
-                <nav class="footer-nav">
-                    <div class="footer-logo">
+            <div class="footer__container">
+                <nav class="footer__nav">
+                    <div class="footer__logo">
                         <a href="#">
                             <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
                         </a>
                     </div>
-                    <ul class="footer-menu">
+                    <ul class="footer__menu">
                         <li><a class="link" href="#">Наші традиції</a></li>
                         <li><a class="link" href="#">Шеф-кухарі</a></li>
                         <li><a class="link" href="#">Формати</a></li>
                         <li><a class="link" href="#">Контакти</a></li>
                     </ul>
                 </nav>
-                <address class="footer-address">
-                    <ul class="address-list">
-                        <li><a class="address-link" href="tel:+38(096)0000007">+ 38 (096) 000 00 07</a></li>
-                        <li><a class="address-link" href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a></li>
-                        <li><a class="address-link" href="https://maps.app.goo.gl/SvD66bGZupn16T4t5" target="_blank">
-                                Україна, м. Київ, вул. Січових Стрільців 54</a>
-                        </li>
-                        <li>
-                            <a href="#"></a>
-                            <svg class="address-icon" width="32" height="32">
-                                <use href="/images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </li>
-                        <li>
-                            <a href="#"></a>
-                            <svg class="address-icon" width="32" height="32">
-                                <use href="/images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </li>
-                        </li>
-                    </ul>
-                    <div class="address-info">
-                        <a class="address-link" href="#" target="_blank">Політика конфіденційності</a>
-                        <p class="address-copyright">&copy; 2022 Дані захищені</p>
+                <address class="footer__address">
+                    <div class="footer__address-cotacts">
+                        <ul class="footer__address-list">
+                            <li><a class="footer__address-link" href="tel:+38(096)0000007">+ 38 (096) 000 00 07</a></li>
+                            <li><a class="footer__address-link"
+                                    href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+                            </li>
+                            <li><a class="footer__address-link" href="https://maps.app.goo.gl/SvD66bGZupn16T4t5"
+                                    target="_blank">
+                                    Україна, м. Київ, вул. Січових Стрільців 54</a>
+                            </li>
+                        </ul>
+                        <div>
+                            <a href="#">
+                                <svg class="footer__address-icon" width="32" height="32">
+                                    <use href="/images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                            <a href="#">
+                                <svg class="footer__address-icon" width="32" height="32">
+                                    <use href="/images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="footer__address-info">
+                        <a class="footer__address-link" href="#" target="_blank">Політика конфіденційності</a>
+                        <p class="footer__address-copyright">&copy; 2022 Дані захищені</p>
                     </div>
                 </address>
             </div>
